# simple_excel_writer

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  sheet.rs  utilities.rs  workbook.rs
tests/: creates_file_with_custom_number_format_and_checks_style.xml  default_style.xml  integration_tests.rs  unit_tests.rs
