[package]
name = "simple_excel_writer"
description = "Simple Excel Writer"
version = "0.1.7"
authors = ["outersky <outersky@gmail.com>"]
license = "Apache-2.0"
homepage="https://github.com/outersky/simple_excel_writer"
repository="https://github.com/outersky/simple_excel_writer"
documentation="https://docs.rs/simple_excel_writer/"
readme = "README.md"
keywords = ["excel", "xls", "xlsx", "office"]
categories = ["encoding", "text-processing"]

[badges]
travis-ci = { repository = "outersky/simple_excel_writer" }

[dependencies]
chrono = { version = "0.4", optional = true, default-features = false }
# omit bzip2 feature
zip = {version = "0.5.5", default-features = false, features = ["deflate", "time"] }
